--- a/less/global.less
+++ b/less/global.less
@@ -1,8 +1,19 @@
 body{
     font-size: 62.5%;
-    max-width: 100%;
+    
+    
 }
 
 .container{
-    width: 90%;
+    
+    .marginCentered();
+    max-width: 1012px;
+}
+
+h3 {
+    font-size: 2.6em;
+}
+
+p {
+    font-size: 1.9em;
 }
