started editing the html, added flex to marketing-pg.less

--- a/less/marketing-pg.less
+++ b/less/marketing-pg.less
@@ -1,6 +1,6 @@
 .container{
     .planner{
-        
+
         .planner-imgs{
 
         }
@@ -17,7 +17,9 @@
     .booking{
 
         .top-row{
-
+            display: flex;
+            flex-direction: row-reverse;
+            justify-content: space-around;
             img{
 
             }
@@ -36,7 +38,9 @@
         } //ends top-row
 
         .bottom-row{
-
+            display: flex;
+            flex-direction: row-reverse;
+            justify-content: space-around;
             img {
 
             }
