--- a/css/index.css
+++ b/css/index.css
@@ -135,3 +135,13 @@ h3 {
 p {
   font-size: 1.9em;
 }
+.container .booking .top-row {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-around;
+}
+.container .booking .bottom-row {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-around;
+}
