--- a/css/index.css
+++ b/css/index.css
@@ -196,3 +196,21 @@ header nav a:hover {
   flex-direction: row-reverse;
   justify-content: space-around;
 }
+.container .save {
+  margin: 3% 2%;
+  display: flex;
+  align-items: center;
+}
+.container .save img {
+  width: 40%;
+}
+.container .save div {
+  margin-left: 2%;
+}
+.container .save div h3 {
+  margin-bottom: 3%;
+  text-decoration: underline;
+}
+.container .save div p {
+  line-height: 1.5rem;
+}
