--- a/less/marketing-pg.less
+++ b/less/marketing-pg.less
@@ -72,19 +72,22 @@
     }
 
     .save {
-
+        margin:3% 2%;
+        display:flex;
+        align-items:center;
         img{
-
+            width:40%;
         }
 
         div {
-
+            margin-left: 2%;
             h3{
-
+                margin-bottom: 3%;
+                text-decoration: underline;
             }
 
             p {
-
+                line-height: 1.5rem;
             }
 
         } //end div
