--- a/less/marketing-pg.less
+++ b/less/marketing-pg.less
@@ -16,15 +16,25 @@
 
     .booking{
 
+        .bookingimg{
+            width:48%;
+            display: block;
+            img{
+                max-width: 100%;
+                text-align: center;
+                object-fit: fill;
+                
+            }
+        }
+        
+        margin: 2rem 0;
         .top-row{
             display: flex;
             flex-direction: row-reverse;
-            justify-content: space-around;
-            img{
-
-            }
+            justify-content: space-around;            
             .top-row-text{
-
+                
+                width: 48%;  
                 h3 {
 
                 }
@@ -39,16 +49,13 @@
 
         .bottom-row{
             display: flex;
-            flex-direction: row-reverse;
             justify-content: space-around;
-            img {
-
-            }
+        
 
             .bottom-row-text{
-
+                width:48%;
                 h3{
-
+                    
                 }
 
                 p {
