--- a/less/marketing-pg.less
+++ b/less/marketing-pg.less
@@ -2,18 +2,36 @@
     .planner{
         border-right: 1px solid red;
         border-left: 1px solid @hilights;
+
         .planner-imgs{
             display:flex; 
             justify-content: space-around;
             margin-top: 3%;
 
+            @media @mobile{
+                flex-direction: column;
+                align-items:center;
+            }
+
             img{
                 width: 30%;
+
+                @media @mobile{
+                    margin: 3% 0;
+                    width: 50%;
+                }
+
             }// this closes img
 
         }// this closes .planner-imgs
         .planner-text{
             margin: 3% 2%;
+
+            @media @mobile{
+                display:flex; 
+                flex-direction: column;
+                align-items:center;
+            }
             h2{
                 text-decoration: underline;
                 font-size: 2rem;
@@ -21,6 +39,11 @@
             }
             p {
                 line-height: 1.5rem;
+
+                @media @mobile{
+                    width:80%;
+                    margin:2% 0;
+                }
             }
         }
     }
@@ -75,12 +98,28 @@
         margin:3% 2%;
         display:flex;
         align-items:center;
+
+        @media @mobile{
+            flex-direction:column;
+        }
+
         img{
             width:40%;
+
+            @media @mobile{
+                width:60%;
+            }
         }
 
         div {
             margin-left: 2%;
+
+            @media @mobile{
+                display:flex;
+                flex-direction:column; 
+                align-items:center;
+            }
+
             h3{
                 margin-bottom: 3%;
                 text-decoration: underline;
@@ -88,6 +127,11 @@
 
             p {
                 line-height: 1.5rem;
+
+                @media @mobile{
+                    width:80%;
+                    margin: 2% 0;
+                }
             }
 
         } //end div
