--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,9 +4,19 @@ header{
     background-color: @bg-color; 
     border: 2px solid @hilights;
     border-radius: 8px;
+
+    @media @mobile{
+        flex-direction:column;
+        align-items:center;
+    }
+
     img{
         width: 15%;
         padding: 1%;
+
+        @media @mobile{
+            width: 40%;
+        }
     }
 
     nav{
@@ -15,11 +25,23 @@ header{
         align-items:center;
         width: 50%;
 
+        @media @mobile{
+            flex-direction:column;
+            width: 100%;
+        }
+
         a{
             text-decoration: none;
             color: black;
             font-size: 1.3rem;
             padding: 1%;
+
+            @media @mobile{
+                margin:1% 0;
+                text-align:center;
+                width:60%;
+                border-bottom: 1px solid black;
+            }
 
             &:hover{
                 color: @hilights;
