--- a/less/marketing-pg.less
+++ b/less/marketing-pg.less
@@ -11,7 +11,7 @@
             @media @mobile{
                 flex-direction: column;
                 align-items:center;
-            }
+            }//this closes media query inside of .planner-imgs
 
             img{
                 width: 30%;
@@ -19,11 +19,12 @@
                 @media @mobile{
                     margin: 3% 0;
                     width: 50%;
-                }
+                }//this closes media 
 
             }// this closes img
 
         }// this closes .planner-imgs
+        
         .planner-text{
             margin: 3% 2%;
 
@@ -43,10 +44,13 @@
                 @media @mobile{
                     width:80%;
                     margin:2% 0;
-                }
-            }
-        }
-    }
+                }// this closes media query inside of p
+
+            }//this close p
+
+        }//this closes .planner-text
+
+    }// this closes .planner section
 
     .booking{
 
@@ -101,15 +105,16 @@
 
         @media @mobile{
             flex-direction:column;
-        }
+        }// this closes media query inside of .save
 
         img{
             width:40%;
 
             @media @mobile{
                 width:60%;
-            }
-        }
+            }// this closes media query inside of img
+
+        }// this closes img
 
         div {
             margin-left: 2%;
@@ -118,12 +123,12 @@
                 display:flex;
                 flex-direction:column; 
                 align-items:center;
-            }
+            }// this closes media query inside of div
 
             h3{
                 margin-bottom: 3%;
                 text-decoration: underline;
-            }
+            }// this closes h3
 
             p {
                 line-height: 1.5rem;
@@ -131,8 +136,9 @@
                 @media @mobile{
                     width:80%;
                     margin: 2% 0;
-                }
-            }
+                }// this closes media query inside of p
+
+            }// this closes p
 
         } //end div
 
