--- a/css/index.css
+++ b/css/index.css
@@ -254,6 +254,26 @@ header nav a:hover {
 .container .save div p {
   line-height: 1.5rem;
 }
+.container .CTA {
+  margin: 0 auto;
+  text-align: center;
+  width: 480px;
+}
+.container .CTA button {
+  font-size: 3em;
+  height: 4rem;
+  background-color: dimgrey;
+  color: #FF8000;
+  box-shadow: 1px 3px cyan;
+  width: 100%;
+  border-radius: 15px;
+  display: flex;
+  justify-content: space-around;
+}
+.container .CTA button:hover {
+  color: white;
+  box-shadow: 3px 3px 3px 3px cyan;
+}
 .container footer {
   margin: 2rem;
   text-align: center;
