--- a/less/marketing-pg.less
+++ b/less/marketing-pg.less
@@ -2,37 +2,18 @@
     .planner{
         border-right: 1px solid red;
         border-left: 1px solid @hilights;
-
         .planner-imgs{
             display:flex; 
             justify-content: space-around;
             margin-top: 3%;
 
-            @media @mobile{
-                flex-direction: column;
-                align-items:center;
-            }//this closes media query inside of .planner-imgs
-
             img{
                 width: 30%;
-
-                @media @mobile{
-                    margin: 3% 0;
-                    width: 50%;
-                }//this closes media 
-
             }// this closes img
 
         }// this closes .planner-imgs
-        
         .planner-text{
             margin: 3% 2%;
-
-            @media @mobile{
-                display:flex; 
-                flex-direction: column;
-                align-items:center;
-            }
             h2{
                 text-decoration: underline;
                 font-size: 2rem;
@@ -40,23 +21,25 @@
             }
             p {
                 line-height: 1.5rem;
-
-                @media @mobile{
-                    width:80%;
-                    margin:2% 0;
-                }// this closes media query inside of p
-
-            }//this close p
-
-        }//this closes .planner-text
-
-    }// this closes .planner section
+            }
+        }
+    }
 
     .booking{
+        
         border-left: 3px solid red;
         border-right: 3px solid @hilights;
         padding: 1.8rem 0;
+        @media @tablet{
+            width: 90%;
+            margin: 1rem auto;
+            
+        }
         .bookingimg{
+            @media @tablet{
+                width: 100%;
+                margin-bottom: 1rem;
+            }
             width:48%;
             display: block;
             img{
@@ -71,6 +54,7 @@
         }
         
         margin: 2rem 0;
+
         .top-row{
             
             display: flex;
@@ -78,17 +62,19 @@
             justify-content: space-around;
             margin: 0 auto 3rem auto;
             width: 98%;
-            height: 14rem;
+            @media @tablet{
+                flex-wrap: wrap;  
+            }
+            
             .top-row-text{
-                
+                @media @tablet{
+                    width: 100%;
+                }
                 width: 48%;  
                 h3 {
                     margin-bottom: 2rem;
                 }
 
-                p {
-
-                }
 
             } //ends top-row-text
         
@@ -99,9 +85,15 @@
             justify-content: space-around;
             margin: 0 auto 1.8rem auto;
             width: 98%;
-            height: 14rem;
+            @media @tablet{
+                flex-wrap: wrap;  
+            }
+            
             .bottom-row-text{
                 width:48%;
+                @media @tablet{
+                    width: 100%;  
+                }
                 h3{
                     margin-bottom: 2rem;
                 }
@@ -119,43 +111,20 @@
         margin:3% 2%;
         display:flex;
         align-items:center;
-
-        @media @mobile{
-            flex-direction:column;
-        }// this closes media query inside of .save
-
         img{
             width:40%;
-
-            @media @mobile{
-                width:60%;
-            }// this closes media query inside of img
-
-        }// this closes img
+        }
 
         div {
             margin-left: 2%;
-
-            @media @mobile{
-                display:flex;
-                flex-direction:column; 
-                align-items:center;
-            }// this closes media query inside of div
-
             h3{
                 margin-bottom: 3%;
                 text-decoration: underline;
-            }// this closes h3
+            }
 
             p {
                 line-height: 1.5rem;
-
-                @media @mobile{
-                    width:80%;
-                    margin: 2% 0;
-                }// this closes media query inside of p
-
-            }// this closes p
+            }
 
         } //end div
 
@@ -169,6 +138,9 @@
         .marginCentered();
         text-align: center;
         width: 480px;
+        @media @mobile{
+            width:95%;
+        }
 
         button{
             font-size: 3em;
