--- a/css/index.css
+++ b/css/index.css
@@ -248,7 +248,6 @@ header nav a:hover {
 }
 .container .booking .top-row {
   display: flex;
-  flex-direction: row-reverse;
   justify-content: space-around;
   margin: 0 auto 3rem auto;
   width: 98%;
@@ -272,6 +271,7 @@ header nav a:hover {
 .container .booking .bottom-row {
   display: flex;
   justify-content: space-around;
+  flex-direction: row-reverse;
   margin: 0 auto 1.8rem auto;
   width: 98%;
 }
@@ -322,17 +322,16 @@ header nav a:hover {
 .container .CTA button {
   font-size: 3em;
   height: 4rem;
-  background-color: dimgrey;
-  color: #FF8000;
-  box-shadow: 1px 3px cyan;
+  background-color: white;
+  color: dimgrey;
   width: 100%;
   border-radius: 15px;
   display: flex;
   justify-content: space-around;
 }
 .container .CTA button:hover {
-  color: white;
-  box-shadow: 3px 3px 3px 3px cyan;
+  color: #FF8000;
+  box-shadow: 3px 3px 10px 5px dimgrey;
 }
 .container footer {
   margin: 2rem;
