--- a/css/index.css
+++ b/css/index.css
@@ -201,11 +201,30 @@ header nav a:hover {
   justify-content: space-around;
   margin-top: 3%;
 }
+@media (max-width: 500px) {
+  .container .planner .planner-imgs {
+    flex-direction: column;
+    align-items: center;
+  }
+}
 .container .planner .planner-imgs img {
   width: 30%;
 }
+@media (max-width: 500px) {
+  .container .planner .planner-imgs img {
+    margin: 3% 0;
+    width: 50%;
+  }
+}
 .container .planner .planner-text {
   margin: 3% 2%;
+}
+@media (max-width: 500px) {
+  .container .planner .planner-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 .container .planner .planner-text h2 {
   text-decoration: underline;
@@ -214,6 +233,12 @@ header nav a:hover {
 }
 .container .planner .planner-text p {
   line-height: 1.5rem;
+}
+@media (max-width: 500px) {
+  .container .planner .planner-text p {
+    width: 80%;
+    margin: 2% 0;
+  }
 }
 .container .booking {
   border-left: 3px solid red;
@@ -296,11 +321,28 @@ header nav a:hover {
   display: flex;
   align-items: center;
 }
+@media (max-width: 500px) {
+  .container .save {
+    flex-direction: column;
+  }
+}
 .container .save img {
   width: 40%;
 }
+@media (max-width: 500px) {
+  .container .save img {
+    width: 60%;
+  }
+}
 .container .save div {
   margin-left: 2%;
+}
+@media (max-width: 500px) {
+  .container .save div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 .container .save div h3 {
   margin-bottom: 3%;
@@ -308,6 +350,12 @@ header nav a:hover {
 }
 .container .save div p {
   line-height: 1.5rem;
+}
+@media (max-width: 500px) {
+  .container .save div p {
+    width: 80%;
+    margin: 2% 0;
+  }
 }
 .container .CTA {
   margin: 0 auto;
