--- a/less/mixins.less
+++ b/less/mixins.less
@@ -2,3 +2,19 @@
 .marginCentered(){
     margin: 0 auto; 
 }
+
+.no-border(){
+    border-left: none; 
+    border-right: none;
+}
+
+.border-setting(){
+    border-right: 2px solid red;
+    border-left: 2px solid @hilights;
+}
+
+.centered-column(){
+    display:flex; 
+    flex-direction: column;
+    align-items:center;
+}
