--- a/less/variables.less
+++ b/less/variables.less
@@ -4,6 +4,13 @@
 @tablet: ~"(max-width: 800px)"; 
 
 // color schemes
+@import url('https://fonts.googleapis.com/css?family=Raleway|Roboto+Slab&display=swap');
+
+
+@headings-font:'Raleway', ;
+@txt-font: 'Roboto Slab', ;
+
+
 // best hexcode color: #696969
 @font-color: dimgrey;
 @bg-color: cyan;
