--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,17 @@
+@font-face {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Raleway'), local('Raleway-Regular'), url(https://fonts.gstatic.com/s/raleway/v14/1Ptug8zYS_SKggPNyC0ISg.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Roboto Slab';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/robotoslab/v11/BngbUXZYTXPIvIBgJJSb6s3BzlRRfKOFbvjojISmb2Rm.ttf) format('truetype');
+}
 html,
 body,
 div,
@@ -132,9 +146,16 @@ body {
 h3 {
   font-size: 2.6em;
 }
+h1,
+h2,
+h3,
+a {
+  font-family: 'Raleway';
+}
 p {
   line-height: 1.5rem;
   font-size: 1.9em;
+  font-family: 'Roboto Slab';
 }
 img {
   border-radius: 15px;
@@ -145,11 +166,13 @@ header {
   background-color: cyan;
   border: 2px solid #FF8000;
   border-radius: 8px;
+  height: 10rem;
 }
 @media (max-width: 500px) {
   header {
     flex-direction: column;
     align-items: center;
+    height: 38em;
   }
 }
 header img {
@@ -193,19 +216,35 @@ header nav a:hover {
   border-radius: 12px;
 }
 .container .planner {
-  border-right: 1px solid red;
-  border-left: 1px solid #FF8000;
+  border-right: 2px solid red;
+  border-left: 2px solid #FF8000;
 }
 @media (max-width: 500px) {
   .container .planner {
-    border-right: none;
     border-left: none;
+    border-right: none;
+  }
+}
+@media (max-width: 800px) {
+  .container .planner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-left: none;
+    border-right: none;
   }
 }
 .container .planner .planner-imgs {
   display: flex;
   justify-content: space-around;
   margin-top: 3%;
+}
+@media (max-width: 800px) {
+  .container .planner .planner-imgs {
+    width: 90%;
+    border-right: 2px solid red;
+    border-left: 2px solid #FF8000;
+  }
 }
 @media (max-width: 500px) {
   .container .planner .planner-imgs {
@@ -223,7 +262,14 @@ header nav a:hover {
   }
 }
 .container .planner .planner-text {
-  margin: 3% 2%;
+  margin: 0 auto;
+}
+@media (max-width: 800px) {
+  .container .planner .planner-text {
+    width: 90%;
+    border-right: 2px solid red;
+    border-left: 2px solid #FF8000;
+  }
 }
 @media (max-width: 500px) {
   .container .planner .planner-text {
@@ -236,19 +282,24 @@ header nav a:hover {
   text-decoration: underline;
   font-size: 2rem;
   margin-bottom: 2%;
+  margin: 2% auto;
+  width: 97%;
 }
 .container .planner .planner-text p {
   line-height: 1.5rem;
+  margin: 2% auto;
+  width: 97%;
 }
 @media (max-width: 500px) {
   .container .planner .planner-text p {
     width: 80%;
     margin: 2% 0;
+    width: 97%;
   }
 }
 .container .booking {
-  border-left: 3px solid red;
-  border-right: 3px solid #FF8000;
+  border-left: 2px solid red;
+  border-right: 2px solid #FF8000;
   padding: 1.8rem 0;
   margin: 2rem 0;
 }
@@ -327,8 +378,9 @@ header nav a:hover {
   display: flex;
   align-items: center;
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .container .save {
+    margin: 3% 0;
     flex-direction: column;
   }
 }
@@ -340,6 +392,11 @@ header nav a:hover {
     width: 60%;
   }
 }
+@media (max-width: 800px) {
+  .container .save img {
+    width: 50%;
+  }
+}
 .container .save div {
   margin-left: 2%;
 }
@@ -348,6 +405,11 @@ header nav a:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+}
+@media (max-width: 800px) {
+  .container .save div {
+    width: 87%;
   }
 }
 .container .save div h3 {
