--- a/less/global.less
+++ b/less/global.less
@@ -14,9 +14,14 @@ h3 {
     font-size: 2.6em;
 }
 
+h1, h2, h3, a{
+    font-family: @headings-font;
+}
+
 p {
     line-height: 1.5rem;
     font-size: 1.9em;
+    font-family: @txt-font;
 }
 
 img {
