--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,10 +4,13 @@ header{
     background-color: @bg-color; 
     border: 2px solid @hilights;
     border-radius: 8px;
+    height: 10rem;
 
     @media @mobile{
         flex-direction:column;
         align-items:center;
+
+        height: 38em;
     }
 
     img{
